[package]
name = "no_dup_bot"
version = "0.1.0"
authors = ["Sheng Yang <yangsheng6810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
log = "0.4.8"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
url = "=1.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url_serde = "0.2.0"
# rocksdb = "0.17.0"
# kv = "0.22.0"
sled = "0.34.6"
img_hash = "3.2.0"
image = "0.23.14"
anyhow = "1.0.43"
bytes = "1"
once_cell = "1.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
